# SAT-Runner

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  install_runsolver.sh  mock_solver.sh  prd.md  solvers.json
include/: Config.hpp  ResourceManager.hpp  Scanner.hpp  Utils.hpp
src/: main.cpp
test_solver/: glucose_static  kissat
